@@ -12,7 +12,10 @@ Changes from 2.2.2 to 2.2.3
 * Improved process of connecting to mySQL server.
 * Fixed installation in web root without virtual hosting
 * Fixed search for links in admin area
-* Fixed wrong redirection in Trade module for nVH setup
+* Fixed wrong redirection in trade module for nVH setup
+* Fixed wrong path in include_path on Windows servers
+* Fixed some bugs in detection of wwwDir and index
+* Added detection of siteDir -> sitedir.ini is obsolete now
 
 Changes from 2.2.1 final to 2.2.2
 ---------------------------------
